Add contents from origin (partially)
- Add contents from origin (partially)

--- a/features.html
+++ b/features.html
@@ -43,5 +43,5 @@
 			<li>2년에 한 번 정도는 유의미한 활동을 하시는 분일 것.</li>
 	   </ul>	
 	</section>
-   <p>한정된 기간, 한정된 인원만을 받아 개발하며, 관련 사항은 드롭다운 메뉴의 서버 운영 항목에서 확인하실 수 있습니다.</p>  
+   <p>한정된 기간, 한정된 인원만을 받아 개발하며, 관련 사항은 서버 운영 안내를 참조하세요.</p>  
 </div>
