--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@ mainTextImage: "./assets/main-image.png"
 <section id="download-now" class="bx--content">
     <h2>지금, 함께하세요.</h2>
     <p>무료로 공개되는 하늘마을 맵을 내려받아 여러분의 손으로 더욱 발전시켜보세요.</p>
-    <button class="bx--btn bx--btn--primary" style="background-color: #82BFFB;">내려받기<img src="./assets/arrow-right.svg" class="bx--btn__icon" width="16" height="16"></button>
+    <a href="./download"><button class="bx--btn bx--btn--primary">내려받기<img src="./assets/arrow-right.svg" class="bx--btn__icon" width="16" height="16"></button></a>
 </section>
