--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ mainTextImage: "./assets/main-image.png"
     </div>
 </section>
 <section id="main-sector-one" class="bx--content">
-    <h2 style="background: no-repeat url('./assets/pic01.png'); background-size: cover; color: transparent; background-clip: text;">다양한 노선, 색다른 건물</h2>
+    <h2 style="background: no-repeat url('./assets/pic01.png'); background-size: cover; color: transparent; background-clip: text; -webkit-background-clip: text;">다양한 노선, 색다른 건물</h2>
     <p>하늘마을 맵에 건축된 모든 건물은 모두 다르게 지어졌습니다. 같은 철도 노선도 역사마다 그 모습이 조금씩 다릅니다.</p>
     <p>고속철도부터 일반적인 지하철까지. 다양한 노선도 만나보세요.</p>
 </section>
 <section id="main-sector-two" class="bx--content">
-    <h2 style="background: url('./assets/pic02.png') 50% 50%; background-size: cover; color: transparent; background-clip: text;">외부뿐만 아니라, 내부까지</h2>
+    <h2 style="background: url('./assets/pic02.png') 50% 50%; background-size: cover; color: transparent; background-clip: text; -webkit-background-clip: text">외부뿐만 아니라, 내부까지</h2>
     <p>멋있는 외부를 가진 수많은 도시맵들, 혹시 텅 빈 안을 보고 실망하신 적은 없으신가요?</p>
     <p>하늘마을 맵은 내부까지 충실하게 구현하여 실제 사용할 수 있는 맵을 목표로 합니다.</p>
 </section>
